# chacha20-poly1305

./: .appveyor.yml  .travis.yml  README.md  aead_chacha20_poly1305.ts  aead_chacha20_poly1305_test.ts  aead_chacha20_poly1305_test_vector.json  aead_chacha20_poly1305_test_vectors.json  aead_xchacha20_poly1305.ts  aead_xchacha20_poly1305_test.ts  aead_xchacha20_poly1305_test_vectors.json  chacha20_poly1305.ts  chacha20_poly1305_test.ts  chacha20_poly1305_test_vectors.json  mod.ts  test.ts  xchacha20_poly1305.ts
aead_chacha20_poly1305_construct/: aead_chacha20_poly1305_construct.ts  aead_chacha20_poly1305_construct_test.ts
chacha20/: chacha20.ts  chacha20_test.ts
chacha20_block/: chacha20_block.ts  chacha20_block_test.ts  chacha20_block_test_vector.json  chacha20_block_test_vectors.json  test_vector.json
chacha20_cipher/: chacha20_cipher.ts  chacha20_cipher_test.ts  chacha20_cipher_test_vector.json  chacha20_cipher_test_vectors.json
chacha20_encrypt/: chacha20_encrypt.ts  chacha20_encrypt_test.ts  chacha20_encrypt_test_vector.json
chacha20_init_state/: chacha20_init_state.ts  chacha20_init_state_test.ts  chacha20_init_state_test_vectors.json
chacha20_poly1305_construct/: chacha20_poly1305_construct.ts  chacha20_poly1305_construct_test.ts  chacha20_poly1305_construct_test_vectors.json
chacha20_quarter_round/: chacha20_quarter_round.ts  chacha20_quarter_round_test.ts  (+2 more)
hchacha20/: hchacha20.ts  (+2 more)
wasm/: .gitignore  Cargo.toml  aead_chacha20_poly1305_test_vectors.json  loadWasm.ts  mod.ts  test.ts  tmp.txt
wasm/pkg/: wasm_bg.wasm
wasm/src/: lib.rs
(+33 files in other folders)
